[package]
name = "sdl_wrapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"

[lib]
name = "sdl_wrapper"
path = "src/lib.rs"

[[bin]]
name = "paint_quadrants"
path = "src/example.rs"
